--- a/hw8/AuctionHouse/AuctionHouse/Views/Home/Index.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Home/Index.cshtml
@@ -42,10 +42,13 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Buyer.Name)
+            @Html.DisplayNameFor(model => model.ItemID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Item.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Buyer.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Price)
@@ -58,10 +61,13 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Buyer.Name)
+            @Html.DisplayFor(modelItem => item.ItemID)
         </td>
         <td>
             @Html.ActionLink(item.Item.Name, "Details", new { id = item.ItemID })
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Buyer.Name)
         </td>
         <td>
             @String.Format("{0:C}", item.Price)
