--- a/hw8/AuctionHouse/AuctionHouse/Views/Home/Details.cshtml
+++ b/hw8/AuctionHouse/AuctionHouse/Views/Home/Details.cshtml
@@ -15,6 +15,13 @@
                     @*Displays item information*@
                     <dt class="col-sm-3">
                         <input type="hidden" id="listing-id" value="@Model.ID">
+                        @Html.DisplayNameFor(model => model.ID):
+                    </dt>
+
+                    <dd class="col-sm-9">
+                        @Html.DisplayFor(model => model.ID)
+                    </dd>
+                    <dt class="col-sm-3">
                         @Html.DisplayNameFor(model => model.Seller.Name):
                     </dt>
 
